--- a/resabsstone.css
+++ b/resabsstone.css
@@ -205,6 +205,7 @@ h2{
     background-color: white;
     padding: 20px 10px 20px 10px;
     box-shadow: 3px 3px  10px #333;
+    font-size: 14px;
 }
 .box1st p,.box2nd p{
     font-family: "Merriweather", serif;
@@ -217,6 +218,7 @@ h2{
     background-color: white;
     padding: 20px 10px 20px 10px;
     box-shadow: 3px 3px  10px #333;
+    font-size: 14px;
 }
 
 /* buybuuytgfvesdtcyjyuvy */
