change-hero-photo

--- a/resabsstone.css
+++ b/resabsstone.css
@@ -141,7 +141,7 @@
 }
 /*Hero*/
 .hero-section{
-    background-image: url(backbanne.jpg);
+    background-image: url(resabstonebackbanner.jpg);
     height: 350px;
     width: 100%;
     background-size: cover;
